force-app/main/default/objects/LogRecording__c/LogRecording__c.object-meta.xml
<CustomObject>
    <label>Log Recording</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>