force-app/main/default/objects/LogRecording__c/fields/ErrorId__c.field-meta.xml
<CustomField>
    <fullName>ErrorId__c</fullName>
    <description>Unique Error Id</description>
    <inlineHelpText>Unique Error Id</inlineHelpText>
    <label>Error ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>