force-app/main/default/objects/LogRecording__c/fields/HeapSize__c.field-meta.xml
<CustomField>
    <fullName>HeapSize__c</fullName>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>