force-app/main/default/objects/LogRecording__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Record ID of the record that threw the exception (if it exists).</description>
    <inlineHelpText>Record ID of the record that threw the exception (if it exists).</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>